Expanded lightbox in progress...

--- a/index.html
+++ b/index.html
@@ -246,6 +246,21 @@
 							<img class="gallery-image" src="images/mjremix.jpg" />
 							<img class="lightbox" src="images/mjremix.jpg" />
 						</div>-->
+						
+						<!--Expanded Lightbox TEST CASE--><!--<div class="gallery-box">
+							<img class="gallery-image" src="images/centerfold.jpg" />
+							<div class="box">
+								<div class="close">[CLOSE BOX]</div>
+								<img class="main-image" src="images/centerfold.jpg" />
+								<div class="details">
+									<h1>Centerfold</h1>
+									<img class="raw-image" src="images/anan02.jpg" />
+									<img class="raw-image" src="images/anan03.jpg" />
+									<p>The biggest task with this one was restoring the original image, which had been split in two to appear across two full pages of a magazine. (Here are the original raws.) I adjusted the angle of the right-hand image so that they would line up properly, then trimmed them as much as possible and placed them side-by-side on a 16x9 canvas. Then I used tiny grafts (mostly from the left-hand image) to carefully paper over the center line between the two, and the small tears in the edges from when the binding of the magazine had been taken apart. During this process I also noticed a slight color variation between the two halves of the photo, so I used color adjustment layers on both sides to bring them in line with each other until the center line was virtually invisible. There are still one or two problem spots that I hope to clear up with more specific adjustments someday, but it looks pretty good for now. Finally, I applied an exposure adjustment to the complete repaired image, grafted over the words that had originally appeared in the lower-right corner, and added my own text in its place (it’s quite subtle since it sort of half-blends into the background—you can probably only see it on the enlarged version of the image).</p>
+								</div>
+							</div>
+						</div>--><!--END TEST-->
+						
 						<div class="spacer-div"></div>
 					</section>
 				</section>
