--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
 							<img class="lightbox" src="images/songbird.jpg" />
 						</div>
 						<div class="gallery-box">
+							<img class="gallery-image" src="images/filmstrip.jpg" />
+							<img class="lightbox" src="images/filmstrip.jpg" />
+						</div>
+						<div class="gallery-box">
 							<img class="gallery-image" src="images/centerfold.jpg" />
 							<img class="lightbox" src="images/centerfold.jpg" />
 						</div>
@@ -231,6 +235,10 @@
 							<img class="lightbox" src="images/noblemind.jpg" />
 						</div>
 						<div class="gallery-box">
+							<img class="gallery-image" src="images/chain.jpg" />
+							<img class="lightbox" src="images/chain.jpg" />
+						</div>
+						<div class="gallery-box">
 							<img class="gallery-image" src="images/tenshi.jpg" />
 							<img class="lightbox" src="images/tenshi.jpg" />
 						</div>
@@ -238,6 +246,8 @@
 							<img class="gallery-image" src="images/takerumedley.jpg" />
 							<img class="lightbox" src="images/takerumedley.jpg" />
 						</div>
+						
+						
 						<!--<div class="gallery-box">
 							<img class="gallery-image" src="images/oyasumi.jpg" />
 							<img class="lightbox" src="images/oyasumi.jpg" />
