Lightbox nav working, still a few bugs

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 	<div id="lightbox-shade"></div>
+	<div id="lightbox-nav-left" class="lightbox-nav"></div>
+	<div id="lightbox-nav-right" class="lightbox-nav"></div>
 	<div id="pagewrapper">
 	
 		<header class="site-header">
