Pageable lightbox is complete

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 	<div id="lightbox-shade"></div>
-	<div id="lightbox-nav-left" class="lightbox-nav"></div>
-	<div id="lightbox-nav-right" class="lightbox-nav"></div>
+	<div id="lightbox-nav-left" class="lightbox-nav"><img src="images/l-arrow.png" /></div>
+	<div id="lightbox-nav-right" class="lightbox-nav"><img src="images/r-arrow.png" /></div>
 	<div id="pagewrapper">
 	
 		<header class="site-header">
