--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 							</li>
 							<!--<li><a href="http://www.marydaros.com/ps">www.marydaros.com/ps</a></li>-->
 							<li>
-								<a href="http://www.jessicahearn.com/akame">www.jessicahearn.com/akame</a>
+								<a href="http://akame.jessicahearn.com">akame.jessicahearn.com</a>
 								<p>Site design and development by Jessica Hearn. This is an HTML-based site designed to demonstrate several principles of mobile-responsive design. Features include a purpose-built responsive image system and a responsive free-grid (on the Gallery page).
 							</li>
-							<li>
+							<!--<li>
 								<a href="http://www.hownottobeseen.com">www.hownottobeeseen.com</a>
 								<p>Site design and development by Jessica Hearn. This is a custom theme built for the Wordpress CMS. It's a hobby website, so it's still lacking some of it's content, but I chip away at it occasionally. It wasn't originally designed to be mobile responsive, but it will be when I'm through with it.</p>
-							</li>
+							</li>-->
 							<li>
-								<a href="http://www.pwsausa.org/MN/">www.pwsausa.org/MN</a>
-								<p>Site design and development by Jessica Hearn. (Note: This organization's parent website is currently under construction, so the hosted site is not available. You can see a temporary archived copy of the PWSA-MN site <a href="http://jessicahearn.com/pwsamn/">here</a>.)</p>
+								<a href="http://pwsamn.jessicahearn.com">pwsamn.jessicahearn.com</a>
+								<p>Site design and development by Jessica Hearn. (Note: This organization's parent website is currently under construction, so the hosted site is not available. This is a temporary archived version of the site.)</p>
 							</li>
 							<li>
 								<a href="http://www.mnmovehelper.com/">www.mnmovehelper.com</a>
