--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<p>Site design and development by Jessica Hearn. (Note: This organization's parent website is currently under construction, so the hosted site is not available. This is a temporary archived version of the site.)</p>
 							</li>
 							<li>
-								<a href="http://www.mnmovehelper.com/">www.mnmovehelper.com</a>
+								<a href="http://mnmovehelper.com/">www.mnmovehelper.com</a>
 								<p>Site design and development by Jessica Hearn.</p>
 							</li>
 						</ul>
